--- a/src/app/bsr/bsr.component.html
+++ b/src/app/bsr/bsr.component.html
@@ -19,12 +19,16 @@
           </button>
         </div>
   
-        <button (click)="moveBackward()" [ngClass]="createPostIt?'menu-left-icon-post':'menu-left-icon'" disableRipple mat-icon-button color="red">
+        <button (click)="moveBackward()"    [class.menu-left-icon-wide-post]="wide &&  createPostIt"   [class.menu-left-icon]="!wide || (wide && !createPostIt) " disableRipple mat-icon-button color="red">
           <mat-icon>keyboard_arrow_left</mat-icon>
         </button>
-        <button (click)="moveForward()"  [ngClass]="createPostIt?'menu-right-icon-post':'menu-right-icon'"  disableRipple mat-icon-button color="red">
-          <mat-icon>keyboard_arrow_right</mat-icon>
-        </button>
+        <button (click)="moveForward()" [class.menu-right-icon]="!wide"
+        [class.menu-right-icon-wide]="wide &&  !createPostIt"
+        [class.menu-right-icon-wide-post]="wide &&  createPostIt"
+        [class.menu-right-icon-post]="!wide &&  createPostIt"  disableRipple mat-icon-button color="red">
+        <mat-icon>keyboard_arrow_right</mat-icon>
+      </button>
+
   
         <!-- COMMENTS BOX -->
         <div class="comment-to-top" cdkDrag cdkDragRootElement=".cdk-overlay-pane" cdkDragHandle
@@ -96,6 +100,14 @@
             mat-icon-button color="warn" aria-label="aria">
             <mat-icon class="full-icon">note_add</mat-icon>
           </button>
+          <button (click)="wideScreenView()" mat-icon-button matTooltip="Wide screen" matTooltipPosition="above"
+          mat-icon-button color="warn" aria-label="aria"> <svg class="full-icon" style="height: 20px"
+            xmlns="http://www.w3.org/2000/svg"
+            viewBox="0 0 448 512"><!--! Font Awesome Pro 6.4.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. -->
+            <path
+              d="M64 32C28.7 32 0 60.7 0 96V416c0 35.3 28.7 64 64 64H384c35.3 0 64-28.7 64-64V96c0-35.3-28.7-64-64-64H64zM224 160c6.7 0 13 2.8 17.6 7.7l104 112c6.5 7 8.2 17.2 4.4 25.9s-12.5 14.4-22 14.4H120c-9.5 0-18.2-5.7-22-14.4s-2.1-18.9 4.4-25.9l104-112c4.5-4.9 10.9-7.7 17.6-7.7z" />
+          </svg>
+        </button>
           <button *ngIf="!createPostIt" (click)="bsr()" mat-icon-button matTooltip="post its" matTooltipPosition="above"
             mat-icon-button color="warn" aria-label="aria">
             <mat-icon class="full-icon">lightbulb_outline</mat-icon>
@@ -121,6 +133,14 @@
             mat-icon-button color="warn" aria-label="aria">
             <mat-icon class="full-icon">note_add</mat-icon>
           </button>
+          <button (click)="wideScreenView()" mat-icon-button matTooltip="Wide screen" matTooltipPosition="above"
+          mat-icon-button color="warn" aria-label="aria"> <svg class="full-icon" style="height: 20px"
+            xmlns="http://www.w3.org/2000/svg"
+            viewBox="0 0 448 512"><!--! Font Awesome Pro 6.4.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. -->
+            <path
+              d="M64 32C28.7 32 0 60.7 0 96V416c0 35.3 28.7 64 64 64H384c35.3 0 64-28.7 64-64V96c0-35.3-28.7-64-64-64H64zM224 160c6.7 0 13 2.8 17.6 7.7l104 112c6.5 7 8.2 17.2 4.4 25.9s-12.5 14.4-22 14.4H120c-9.5 0-18.2-5.7-22-14.4s-2.1-18.9 4.4-25.9l104-112c4.5-4.9 10.9-7.7 17.6-7.7z" />
+          </svg>
+        </button>
           <button (click)="openFullscreen()" matTooltip="full-screen" matTooltipPosition="above" mat-icon-button
             color="warn" aria-label="aria">
             <mat-icon class="full-icon">aspect_ratio</mat-icon>
@@ -179,7 +199,7 @@
   
         <!-- PRESENTATION MENU-->
         <div *ngIf="!createPostIt" fxLayoutAlign="center center" class="col">
-          <div [ngClass]="{'slide-box': !width, 'slide-box-width': width}"  class="mat-elevation-z12" [style.background]="slideBackground">
+          <div class=" mat-elevation-z12" [ngClass]="{'slide-box': !wide, 'slide-box-width': wide}"  [style.background]="slideBackground">
   
   
             <mat-toolbar class="toolbar mat-elevation-z4 bounceIn" *ngIf="false">
@@ -263,7 +283,7 @@
               <div class="col-md-12">
   
                 <!-- Brandstorm and Names toolbar -->
-                <mat-toolbar class="toptoolbar mat-elevation-z12" color="primary">
+                <mat-toolbar [class.toolbar-postit-wide]="wide && createPostIt"  [class.toptoolbar]="!wide"  class=" mat-elevation-z12" color="primary">
                   <div class="row">
                     <div (click)="theme()" class="col brandstorm"
                       style="color: white; font-size: 40px;font-family: Arial">
@@ -294,11 +314,11 @@
                 <div class="row">
                   <div class="col-md-8">
   
-                    <div class="presentation-box " style="overflow-y: scroll;">
+                    <div class="presentation-box " [class.presentation-box-wide]="wide && createPostIt" style="overflow-y: scroll;">
   
                       <!-- POST_REPEATER -->
   
-                      <div class="row post-it-container " [ngStyle]="{'max-width': myMaxWith }"
+                      <div class="row post-it-container " [style.max-width]="wide && createPostIt? '947px': '925px'" [ngStyle]="{'max-width': myMaxWith }"
                       dragula="TASKS" [dragulaModel]="conceptData.concepts" (dragulaModelChange)="conceptData.concepts = $event">
                         <div [ngClass]="postItListTheme" *ngFor="let item of conceptData.concepts; let i = index;">
   
@@ -341,7 +361,7 @@
                   <div class="col-md-4" *ngIf="nameBox && nameBoxB">
                     <!-- NAMES  nameCandidates BOX -->
                     <!-- <button mat-button class="screen-button">screen</button> -->
-                    <div class="names-container bounceOut mat-elevation-z2" [ngStyle]="{'max-width': myMaxRWith  }">
+                    <div [class.names-container-wide]="wide" [class.names-container]="!wide"  class=" bounceOut mat-elevation-z2" [ngStyle]="{'max-width': myMaxRWith  }">
                       <div *ngFor="let  nameCandidate of nameCandidates; let i = index">
                         <span *ngIf="!isScreeningNames" (dblclick)="openDialog(nameCandidate, 'deleteName')"
                           style="font-size:22px;margin: 10px;cursor: pointer;overflow: scroll;"
@@ -357,7 +377,7 @@
                       </div>
                     </div>
   
-                    <form name="loginForm" [formGroup]="loginForm" novalidate class="name-form mat-elevation-z4"
+                    <form name="loginForm" [formGroup]="loginForm" novalidate [class.name-form-wide]="wide" class="name-form mat-elevation-z4"
                       fxLayoutAlign="center center">
   
                       <mat-form-field appearance="outline">
@@ -462,7 +482,14 @@
                         mat-icon-button color="primary" aria-label="Example icon-button with a heart icon">
                         <mat-icon>note_add</mat-icon>
                       </button>
-  
+                      <button (click)="wideScreenView()" mat-icon-button matTooltip="Wide screen" matTooltipPosition="above"
+                      mat-icon-button color="warn" aria-label="aria"> <svg class="full-icon" style="height: 20px"
+                        xmlns="http://www.w3.org/2000/svg"
+                        viewBox="0 0 448 512"><!--! Font Awesome Pro 6.4.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. -->
+                        <path
+                          d="M64 32C28.7 32 0 60.7 0 96V416c0 35.3 28.7 64 64 64H384c35.3 0 64-28.7 64-64V96c0-35.3-28.7-64-64-64H64zM224 160c6.7 0 13 2.8 17.6 7.7l104 112c6.5 7 8.2 17.2 4.4 25.9s-12.5 14.4-22 14.4H120c-9.5 0-18.2-5.7-22-14.4s-2.1-18.9 4.4-25.9l104-112c4.5-4.9 10.9-7.7 17.6-7.7z" />
+                      </svg>
+                    </button>
                       <input class="search" placeholder="search" type="text" (input)="searchTerm($event.target.value)">
   
                       <button (click)="moveBackward()" mat-icon-button color="accent"
